# cae-research-kit

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  conftest.py  pyproject.toml
docs/: PROTOCOL-v1.0.md
docs/adr/: ADR-021-h5-falsification.md  ADR-022-h6-pre-registration.md  ADR-023-h6-beta-phase-space.md  ADR-023.bis-pressure-vector-trajectory.md  ADR-023.ter-paired-wilcoxon.md  ADR-024-h6-gamma-obs-shuffled-control.md  ADR-025-h6-release-decision.md  ADR-026-h7-sigma.md  ADR-026-v2.1-h7-sigma-amendment-inverted.md  ADR-027-h7-sigma-statistical-chain.md  ADR-028-h7-kappa-or-h8-pivot.md  ADR-029-h7-sigma-release.md  ADR-030-h7-kappa-pre-registration.md  (+7 more)
keys/: .gitignore  README.md  cae-cert-issuer.pub
research/: MANIFEST.v0.1.0.yaml  MANIFEST.v0.2.0.yaml  MANIFEST.v0.3.0.yaml  MANIFEST.v0.4.0.yaml  MANIFEST.v0.5.0.yaml  MANIFEST.v0.6.0.yaml  MANIFEST.v0.7.0.yaml  cae-cert-v0.6.0.v01.json  cae-cert-v0.6.0.v01.json.sig  calibration_e1.json  h5_run_results.csv  h5_verdict.json  h6_beta_run_results.csv  h6_beta_verdict.json  h6_gamma_run_results.csv  h6_gamma_verdict.json  h7_kappa_audit_v04.csv  h7_kappa_audit_v04.report.txt  h7_kappa_audit_v04_iter2.csv  h7_kappa_audit_v04_iter2.report.txt  h7_kappa_boundary_sweep.csv  h7_kappa_boundary_verdict.json  h7_kappa_portability_verdict.json  h7_kappa_replication_v060.csv  h7_kappa_replication_v060.report.txt  h7_kappa_run_results.csv  h7_kappa_verdict.json  h7_sigma_run_results.csv  h7_sigma_verdict.json
scripts/: brute_force_obs_shuffle.py  issue_v060_cert.py
(+47 files in other folders)
