[project]
name = "cae-research-kit"
version = "0.7.0"
description = "Experimental Observability Platform for Online Adaptive Optimization Pressure"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.12.0",
    "POT==0.9.3",
    "pandas==2.2.1",
    "matplotlib==3.8.3",
    # ADR-036 §4 — CAE-Cert v0.1 protocol runtime deps.
    "cryptography>=42,<43",
    "jcs==0.2.1",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
]

[tool.cae]
seed = 42
falsification_mode = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
